--- a/src/output.css
+++ b/src/output.css
@@ -606,12 +606,40 @@ video {
   right: 4rem;
 }
 
+.top-0 {
+  top: 0px;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
+.z-40 {
+  z-index: 40;
+}
+
+.z-auto {
+  z-index: auto;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .flex {
@@ -1019,6 +1047,10 @@ video {
 
   .sm\:inline {
     display: inline;
+  }
+
+  .sm\:hidden {
+    display: none;
   }
 
   .sm\:h-96 {
