--- a/src/output.css
+++ b/src/output.css
@@ -598,6 +598,10 @@ video {
   margin-top: 2rem;
 }
 
+.ml-10 {
+  margin-left: 2.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -676,6 +680,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -846,6 +854,26 @@ video {
   padding-top: 1.25rem;
 }
 
+.pl-96 {
+  padding-left: 24rem;
+}
+
+.pl-52 {
+  padding-left: 13rem;
+}
+
+.pl-64 {
+  padding-left: 16rem;
+}
+
+.pl-72 {
+  padding-left: 18rem;
+}
+
+.pl-80 {
+  padding-left: 20rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -949,6 +977,18 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .sm\:items-center {
+    align-items: center;
+  }
+
+  .sm\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .sm\:justify-center {
+    justify-content: center;
+  }
+
   .sm\:p-16 {
     padding: 4rem;
   }
@@ -967,6 +1007,10 @@ video {
 
   .sm\:pt-28 {
     padding-top: 7rem;
+  }
+
+  .sm\:pl-80 {
+    padding-left: 20rem;
   }
 }
 
@@ -1043,6 +1087,10 @@ video {
 
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:items-center {
+    align-items: center;
   }
 
   .lg\:justify-between {
